feat(mate): add host-gated applications API and search_text optimization
- guard GET /api/applications/party/{partyId} by host ownership (403 on non-host)

- add GET /api/applications/party/{partyId}/mine for single current-user application lookup

- introduce parties.search_text with create/update backfill and indexed migrations (oracle/postgresql)

- add verification tests for host access control and /mine null behavior